--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
     "start": "node dist/index.js",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -23,7 +24,16 @@
     "@types/cors": "^2.8.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
+    "@types/factory-girl": "^5.0.2",
+    "@types/faker": "^5.1.0",
+    "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/supertest": "^2.0.10",
+    "factory-girl": "^5.0.4",
+    "faker": "^5.1.0",
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2",
+    "ts-jest": "^26.3.0",
     "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
   }
